--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "dayjs": "^1.9.7",
     "firebase": "^8.0.2",
     "notistack": "^1.0.1",
     "prop-types": "^15.7.2",
