--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "chart.js": "^2.9.4",
     "dayjs": "^1.9.7",
     "firebase": "^8.0.2",
     "notistack": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.11.2",
     "react-query": "^2.26.2",
