--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "chart.js": "^2.9.4",
+    "clsx": "^1.1.1",
     "dayjs": "^1.9.7",
     "firebase": "^8.0.2",
     "notistack": "^1.0.1",
